fixed nav bar spacing

--- a/css/index.css
+++ b/css/index.css
@@ -29,7 +29,9 @@ footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 body {
+    width: 100%;
 	line-height: 1;
+    margin: 0 auto;
 }
 a{
     text-decoration: none;
@@ -57,37 +59,56 @@ table {
 
 html, body {
     height: 100%;
+    width: 100%;
     font-family: 'Roboto', sans-serif;
 }
 header{
     display: flex;
+    flex-wrap: nowrap;
+    align-items: center;
+    padding-top: 20px;
+    padding-bottom: 30px;
+}
+img{
+    width: 100%;
+}
+header nav *{
+    display: inline-block;
     flex-wrap: wrap;
     align-items: center;
-    padding-top: 2%;
-    padding-bottom: 4%;
+    justify-content: space-evenly;
 }
-nav{
+nav ul *{
     display: inline-block;
-    padding-left: 2rem;
-    justify-content: space-between;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    padding-left: 32px;
+    padding-right: 32px;
+}
+a{
+    font-size: .7rem;
 }
 h1, h2, h3, h4, h5 {
-
-    font-size: 18px;
+    font-size: 1.5rem;
+    line-height: 5%;
     margin-bottom: 15px;
     font-family: 'Rubik', sans-serif;
     font-weight: bold;
 }
-
+h2{
+    font-size: 20px;
+}
 p {
     line-height: 1.4;
 }
-.a{
+.ul {
     display: flex;
-    justify-content: space-between;
-    padding-left: 30px;
-    padding-right: 30px;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    justify-content: space-evenly;
+    width: 100%;
 }
+
 .container {
     width: 800px;
     margin: 0 auto;
@@ -97,7 +118,7 @@ p {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    margin-top: 20px;
+    margin-top: 5%;
     margin-bottom: 20px;
     border-bottom: 1px dashed black;
 }
@@ -133,7 +154,7 @@ p {
     align-items: center;
     justify-content: center;
 }
-.boxes .box1{
+.box1{
     background-color: teal;
 }
 .box2{
